--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Your Name</title>
+    <title>About Me - Charysma Adams</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
 
     <section>
         <h2>Opening Statement</h2>
-        <p>I am a driven data analyst passionate about leveraging data to solve real-world problems.</p>
+        <p>With over 4 years of experience in civil engineering and design, I’ve developed a keen eye for data-driven problem-solving. My background in managing engineering projects combined with expertise in tools like Python, SQL, and Tableau allows me to uncover insights and optimize performance. Currently, I’m working towards completing the Google Data Analytics Certificate and am eager to contribute to dynamic, forward-thinking teams.</p>
 
         <h2>Work History</h2>
         <ul>
